[project]
name = "extended-audience-profiles"
version = "0.1.1"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "kodosumi>=0.9.3",
    "requests>=2.31.0",
    "pytest>=8.4.1",
    "pytest-mock>=3.14.1",
    "pytest-asyncio>=0.23.0",
    "python-dotenv>=1.1.0",
    "ray>=2.47.1",
    "masumi>=0.1.0",
    "pyyaml>=6.0.1",
    "openai-agents>=0.1.0",
    "aiofiles>=24.1.0",
    "tiktoken>=0.5.0",
]

[tool.setuptools]
packages = ["extended_audience_profiles"]
